--- a/AutoTrading.Application/AutoTrading.Application.csproj
+++ b/AutoTrading.Application/AutoTrading.Application.csproj
@@ -14,8 +14,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Accounts\Queries\"/>
         <Folder Include="Common\Routins\" />
+        <Folder Include="Roles\Commands\CreateRole\" />
+        <Folder Include="Roles\Commands\DeleteRole\" />
+        <Folder Include="Roles\Commands\UpdateRole\" />
+        <Folder Include="Roles\EventHandlers\" />
+        <Folder Include="UserRoles\Commands\CreateUserRole\" />
+        <Folder Include="UserRoles\Commands\DeleteUserRole\" />
+        <Folder Include="UserRoles\Commands\UpdateUserRole\" />
+        <Folder Include="UserRoles\EventHandlers\" />
+        <Folder Include="UserRoles\Queries\" />
         <Folder Include="Users\Commands\DeleteUser\"/>
         <Folder Include="Users\Commands\UpdateUser\"/>
         <Folder Include="Users\EventHandlers\"/>
