--- a/AutoTrading.Application/AutoTrading.Application.csproj
+++ b/AutoTrading.Application/AutoTrading.Application.csproj
@@ -15,9 +15,7 @@
 
     <ItemGroup>
         <Folder Include="Common\Routins\" />
-        <Folder Include="UserRoles\Queries\" />
-        <Folder Include="Users\Commands\DeleteUser\"/>
-        <Folder Include="Users\Commands\UpdateUser\"/>
+        <Folder Include="Users\Commands\UpdateUser\ChangePassword\" />
         <Folder Include="Users\EventHandlers\"/>
         <Folder Include="Users\Queries\"/>
     </ItemGroup>
