--- a/AutoTrading.Shared/AutoTrading.Shared.csproj
+++ b/AutoTrading.Shared/AutoTrading.Shared.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <Folder Include="Attributes\" />
       <Folder Include="Extensions\" />
+      <Folder Include="Generated\" />
       <Folder Include="Utilities\" />
     </ItemGroup>
 </Project>
