--- a/.gitignore
+++ b/.gitignore
@@ -1226,3 +1226,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+AutoTrading.Api/appsettings.json
+AutoTrading.Api/appsettings.Development.json
+
