--- a/Application.FunctionalTests/Application.FunctionalTests.csproj
+++ b/Application.FunctionalTests/Application.FunctionalTests.csproj
@@ -25,7 +25,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Respawn" Version="6.2.1" />
-        <PackageReference Include="Testcontainers.MsSql" Version="3.8.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.8.0" />
     </ItemGroup>
 
     <ItemGroup>
