Action, ActionRole 추가

--- a/AutoTrading.Domain/AutoTrading.Domain.csproj
+++ b/AutoTrading.Domain/AutoTrading.Domain.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Events\MenuRoleEvent\" />
       <Folder Include="Generated\" />
     </ItemGroup>
 
