--- a/Domain.UnitTests/Domain.UnitTests.csproj
+++ b/Domain.UnitTests/Domain.UnitTests.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AutoTrading.Domain\AutoTrading.Domain.csproj" />
+      <ProjectReference Include="..\AutoTrading.Shared\AutoTrading.Shared.csproj" />
     </ItemGroup>
 
 </Project>
